[gd_scene load_steps=25 format=2]

[ext_resource path="res://RegionUI/RegionUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://RegionView/Region.gd" type="Script" id=2]
[ext_resource path="res://RegionView/RegionGrid.gd" type="Script" id=3]
[ext_resource path="res://RegionView/CameraAnchor.gd" type="Script" id=4]
[ext_resource path="res://Radio/Stations/RadioPlayer.gd" type="Script" id=5]
[ext_resource path="res://scripts/regions/settings.gd" type="Script" id=6]
[ext_resource path="res://scripts/regions/compass.gd" type="Script" id=7]
[ext_resource path="res://scripts/regions/exit_btn.gd" type="Script" id=8]
[ext_resource path="res://scripts/regions/link_btn.gd" type="Script" id=9]
[ext_resource path="res://scripts/regions/regions_btn.gd" type="Script" id=10]
[ext_resource path="res://scripts/regions/top_menu.gd" type="Script" id=11]
[ext_resource path="res://scripts/regions/bottom_left_menu.gd" type="Script" id=12]
[ext_resource path="res://scripts/regions/regions_menu.gd" type="Script" id=13]
[ext_resource path="res://scripts/regions/settings_menu.gd" type="Script" id=14]
[ext_resource path="res://scripts/regions/new_region_btn.gd" type="Script" id=15]
[ext_resource path="res://scripts/regions/open_region_btn.gd" type="Script" id=16]
[ext_resource path="res://scripts/regions/sound_btn.gd" type="Script" id=17]
[ext_resource path="res://scripts/regions/screenshot_area_btn.gd" type="Script" id=18]
[ext_resource path="res://scripts/regions/general_btn.gd" type="Script" id=19]
[ext_resource path="res://scripts/regions/screenshot_btn.gd" type="Script" id=20]
[ext_resource path="res://scripts/regions/screen_btn.gd" type="Script" id=21]
[ext_resource path="res://scripts/regions/show_option1_btn.gd" type="Script" id=22]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="ImageTexture" id=2]

[node name="Region" type="Node2D"]
script = ExtResource( 2 )

[node name="BaseGrid" type="TileMap" parent="."]
position = Vector2( 1, 1 )
mode = 2
cell_quadrant_size = 64
cell_custom_transform = Transform2D( 90, 18.7, -37.3, 45, 0, 0 )
cell_tile_origin = 2
format = 1
script = ExtResource( 3 )

[node name="CameraAnchor" type="KinematicBody2D" parent="."]
script = ExtResource( 4 )

[node name="MainCamera" type="Camera2D" parent="CameraAnchor"]
anchor_mode = 0
current = true
drag_margin_left = 0.8
drag_margin_top = 0.8
drag_margin_right = 0.8
drag_margin_bottom = 0.8

[node name="RadioPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource( 5 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 128, 128 )

[node name="Grid" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_right = 5433.0
margin_bottom = 3155.0
mouse_filter = 2
stretch_mode = 2

[node name="UICanvas" type="CanvasLayer" parent="."]

[node name="UI" parent="UICanvas" instance=ExtResource( 1 )]

[node name="Control" type="Control" parent="UICanvas"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -194.0
margin_right = 305.0

[node name="bottom_left_menu" type="TextureRect" parent="UICanvas/Control"]
material = SubResource( 1 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -112.0
margin_right = 418.0
margin_bottom = -10.0
texture = SubResource( 2 )
script = ExtResource( 12 )

[node name="Label" type="Label" parent="UICanvas/Control/bottom_left_menu"]
modulate = Color( 0.223529, 0.286275, 0.388235, 1 )
use_parent_material = true
margin_left = 71.0
margin_top = 15.0
margin_right = 114.0
margin_bottom = 29.0
text = "Region"

[node name="total_population" type="Label" parent="UICanvas/Control/bottom_left_menu"]
modulate = Color( 0.223529, 0.286275, 0.388235, 1 )
margin_left = 36.0
margin_top = 42.0
margin_right = 76.0
margin_bottom = 56.0
text = "0"

[node name="region_name" type="Label" parent="UICanvas/Control/bottom_left_menu"]
modulate = Color( 0.223529, 0.286275, 0.388235, 1 )
margin_left = 24.0
margin_top = 77.0
margin_right = 84.0
margin_bottom = 91.0
text = "Timbuktu"

[node name="Control2" type="Control" parent="UICanvas"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0

[node name="top_menu" type="TextureRect" parent="UICanvas/Control2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -577.0
margin_right = 577.0
margin_bottom = 41.0
script = ExtResource( 11 )

[node name="HBoxContainer" type="HBoxContainer" parent="UICanvas/Control2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 20.0
margin_right = 200.0
margin_bottom = 60.0
rect_min_size = Vector2( 400, 60 )
alignment = 1

[node name="regions_btn" type="TextureButton" parent="UICanvas/Control2/HBoxContainer"]
margin_right = 80.0
margin_bottom = 60.0
rect_min_size = Vector2( 80, 60 )
toggle_mode = true
script = ExtResource( 10 )

[node name="regions_menu" type="TextureRect" parent="UICanvas/Control2/HBoxContainer/regions_btn"]
show_behind_parent = true
margin_left = -176.0
margin_top = -8.0
margin_right = 572.0
margin_bottom = 196.0
script = ExtResource( 13 )

[node name="new_region_btn" type="TextureButton" parent="UICanvas/Control2/HBoxContainer/regions_btn/regions_menu"]
margin_left = 50.0
margin_top = 124.0
margin_right = 90.0
margin_bottom = 164.0
script = ExtResource( 15 )

[node name="open_region_btn" type="TextureButton" parent="UICanvas/Control2/HBoxContainer/regions_btn/regions_menu"]
margin_left = 125.0
margin_top = 126.0
margin_right = 165.0
margin_bottom = 166.0
script = ExtResource( 16 )

[node name="show_option1_btn" type="TextureButton" parent="UICanvas/Control2/HBoxContainer/regions_btn/regions_menu"]
margin_left = 320.0
margin_top = 124.0
margin_right = 337.0
margin_bottom = 141.0
rect_min_size = Vector2( 17, 17 )
script = ExtResource( 22 )

[node name="Label" type="Label" parent="UICanvas/Control2/HBoxContainer/regions_btn/regions_menu/show_option1_btn"]
modulate = Color( 0.223529, 0.286275, 0.388235, 1 )
margin_left = 28.0
margin_top = 3.0
margin_right = 138.0
margin_bottom = 17.0
text = "Show City Names"

[node name="Panel" type="Panel" parent="UICanvas/Control2/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 84.0
margin_right = 164.0
margin_bottom = 60.0
rect_min_size = Vector2( 80, 60 )

[node name="link_btn" type="TextureButton" parent="UICanvas/Control2/HBoxContainer"]
margin_left = 168.0
margin_right = 248.0
margin_bottom = 60.0
rect_min_size = Vector2( 80, 60 )
script = ExtResource( 9 )

[node name="Panel2" type="Panel" parent="UICanvas/Control2/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 252.0
margin_right = 332.0
margin_bottom = 60.0
rect_min_size = Vector2( 80, 60 )

[node name="exit_btn" type="TextureButton" parent="UICanvas/Control2/HBoxContainer"]
margin_left = 336.0
margin_right = 416.0
margin_bottom = 60.0
rect_min_size = Vector2( 80, 60 )
script = ExtResource( 8 )

[node name="compass" type="TextureRect" parent="UICanvas"]
margin_left = 20.0
margin_top = 20.0
rect_min_size = Vector2( 66, 43 )
script = ExtResource( 7 )

[node name="settings" type="TextureButton" parent="UICanvas"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -80.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 66.0
rect_min_size = Vector2( 60, 46 )
toggle_mode = true
script = ExtResource( 6 )

[node name="settings_menu" type="TextureRect" parent="UICanvas/settings"]
show_behind_parent = true
margin_left = -212.0
margin_top = -7.0
margin_right = 59.0
margin_bottom = 131.0
script = ExtResource( 14 )

[node name="screenshot_btn" type="TextureButton" parent="UICanvas/settings/settings_menu"]
margin_left = 12.0
margin_top = 102.0
margin_right = 52.0
margin_bottom = 131.0
script = ExtResource( 20 )

[node name="screenshot_area_btn" type="TextureButton" parent="UICanvas/settings/settings_menu"]
margin_left = 60.0
margin_top = 102.0
margin_right = 100.0
margin_bottom = 131.0
script = ExtResource( 18 )

[node name="screen_btn" type="TextureButton" parent="UICanvas/settings/settings_menu"]
margin_left = 108.0
margin_top = 102.0
margin_right = 148.0
margin_bottom = 131.0
script = ExtResource( 21 )

[node name="sound_btn" type="TextureButton" parent="UICanvas/settings/settings_menu"]
margin_left = 148.0
margin_top = 102.0
margin_right = 188.0
margin_bottom = 131.0
script = ExtResource( 17 )

[node name="general_btn" type="TextureButton" parent="UICanvas/settings/settings_menu"]
margin_left = 188.0
margin_top = 99.0
margin_right = 228.0
margin_bottom = 128.0
script = ExtResource( 19 )

[connection signal="pressed" from="UICanvas/Control2/HBoxContainer/regions_btn" to="UICanvas/Control2/HBoxContainer/regions_btn" method="_on_regions_btn_pressed"]
[connection signal="pressed" from="UICanvas/Control2/HBoxContainer/regions_btn" to="UICanvas/settings" method="_on_regions_btn_pressed"]
[connection signal="pressed" from="UICanvas/Control2/HBoxContainer/regions_btn/regions_menu/show_option1_btn" to="UICanvas/Control2/HBoxContainer/regions_btn/regions_menu/show_option1_btn" method="_on_show_option1_btn_pressed"]
[connection signal="pressed" from="UICanvas/Control2/HBoxContainer/exit_btn" to="UICanvas/Control2/HBoxContainer/exit_btn" method="_on_exit_btn_pressed"]
[connection signal="pressed" from="UICanvas/settings" to="UICanvas/Control2/HBoxContainer/regions_btn" method="_on_settings_pressed"]
[connection signal="pressed" from="UICanvas/settings" to="UICanvas/settings" method="_on_settings_pressed"]
